[package]
name = "hyper-op"
version = "0.5.0"
edition = "2021"
description = "arbitrary-precision Hyper-operations"
keywords = ["math", "recursion", "big"]
categories = ["command-line-utilities", "algorithms"]
license = "Unlicense"
repository = "https://github.com/Rudxain/HYPER-OP.RS"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
